--- a/AI-Group/MainWindow.xaml
+++ b/AI-Group/MainWindow.xaml
@@ -8,7 +8,7 @@
   xmlns:wv2="clr-namespace:Microsoft.Web.WebView2.Wpf;assembly=Microsoft.Web.WebView2.Wpf"
   xmlns:local="clr-namespace:AI_Group"
   mc:Ignorable="d"
-  Title="MainWindow"
+  Title="AI Group"
   Height="720"
   Width="1280"
   WindowStartupLocation="CenterScreen"
