--- a/AI-Group/App.xaml
+++ b/AI-Group/App.xaml
@@ -2,11 +2,12 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:AI_Group"
-             StartupUri="MainWindow.xaml">
+             Startup="Application_Startup">
     <Application.Resources>
         <Style x:Key="Normal" TargetType="Button">
-            <Setter Property="Background" Value="#FF504A4D"/>
-            <Setter Property="Foreground" Value="White"/>
+            <Setter Property="Background" Value="#f4f4f4"/>
+            <Setter Property="Foreground" Value="Gray"/>
+            <Setter Property="BorderBrush" Value="Transparent"/>
             <Style.Triggers>
                 <Trigger Property="IsEnabled" Value="False">
                     <Setter Property="Background" Value="Gray"/>
@@ -18,5 +19,22 @@
                 </Trigger>
             </Style.Triggers>
         </Style>
+
+        <Style BasedOn="{StaticResource {x:Type TextBlock}}"
+        TargetType="TextBlock"
+        x:Key="TitleText">
+            <Setter Property="FontSize" Value="26"/>
+            <Setter Property="Foreground">
+                <Setter.Value>
+                    <LinearGradientBrush StartPoint="0.5,0" EndPoint="0.5,1">
+                        <LinearGradientBrush.GradientStops>
+                            <GradientStop Offset="0.0" Color="#90DDDD" />
+                            <GradientStop Offset="1.0" Color="#5BFFFF" />
+                        </LinearGradientBrush.GradientStops>
+                    </LinearGradientBrush>
+                </Setter.Value>
+            </Setter>
+        </Style>
+
     </Application.Resources>
 </Application>
