--- a/AI-Group/MainWindow.xaml
+++ b/AI-Group/MainWindow.xaml
@@ -1,4 +1,4 @@
-<Window
+﻿<Window
   x:Class="AI_Group.MainWindow"
   xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
   xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -36,10 +36,58 @@
 
             <DockPanel x:Name="MainDockPanel"  Grid.Column="1" Grid.Row="1">
                 <Label x:Name="lblWelcome" Content="欢迎使用 AI-Group！请选择左侧的 AI 聊天工具开始使用。" FontSize="24" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+               
             </DockPanel>
+            <Canvas x:Name="LoadingCanvas" Visibility="Hidden" Grid.Column="1" Grid.Row="1" IsHitTestVisible="False"  HorizontalAlignment="Center" VerticalAlignment="Center">
+                <!-- 动画内容，使用Canvas的附加属性定位 -->
+                <Grid Canvas.Left="-110" Canvas.Top="-110">
+                    <Grid x:Name="OverlayLayer" IsHitTestVisible="False">
+                        <!-- 这里放置你的动画 -->
+                        <Grid Width="220" Height="220" HorizontalAlignment="Center" VerticalAlignment="Center">
+                            <Grid Width="220" Height="220">
+                                <!-- 静态的PulseImage -->
+                                <Image x:Name="LoadingLogo" Width="50" Height="50" HorizontalAlignment="Center" VerticalAlignment="Center"/>
 
+                                <!-- 旋转的圆点容器 -->
+                                <Grid x:Name="DotsContainer" HorizontalAlignment="Center" VerticalAlignment="Center" Width="200" Height="200" RenderTransformOrigin="0.5,0.5">
+                                    <Grid.RenderTransform>
+                                        <RotateTransform x:Name="DotsRotate"/>
+                                    </Grid.RenderTransform>
+
+                                    <!-- 12个圆点，每30度一个，距离中心85像素 -->
+                                    <!-- 使用Margin定位，第一个参数是左，第二个是上，第三个是右，第四个是下 -->
+                                    <Ellipse Width="10" Height="10" Fill="#2196F3" Margin="0,0,0,85"/>
+                                    <Ellipse Width="10" Height="10" Fill="#2196F3" Margin="0,0,60,60"/>
+                                    <Ellipse Width="10" Height="10" Fill="#2196F3" Margin="85,0,0,0"/>
+                                    <Ellipse Width="10" Height="10" Fill="#2196F3" Margin="60,60,0,0"/>
+                                    <Ellipse Width="10" Height="10" Fill="#2196F3" Margin="0,85,0,0"/>
+                                    <Ellipse Width="10" Height="10" Fill="#2196F3" Margin="0,60,60,0"/>
+                                    <Ellipse Width="10" Height="10" Fill="#2196F3" Margin="0,0,85,0"/>
+                                    <Ellipse Width="10" Height="10" Fill="#2196F3" Margin="60,0,0,60"/>
+
+                                    <Grid.Triggers>
+                                        <EventTrigger RoutedEvent="Grid.Loaded">
+                                            <BeginStoryboard>
+                                                <Storyboard>
+                                                    <!-- 匀速旋转动画 -->
+                                                    <DoubleAnimation
+                                                      Storyboard.TargetName="DotsRotate"
+                                                      Storyboard.TargetProperty="Angle"
+                                                      From="0" To="360" Duration="0:0:5"
+                                                      RepeatBehavior="Forever"/>
+                                                </Storyboard>
+                                            </BeginStoryboard>
+                                        </EventTrigger>
+                                    </Grid.Triggers>
+                                </Grid>
+                            </Grid>
+                        </Grid>
+                    </Grid>
+                </Grid>
+            </Canvas>
         </Grid>
 
+        
     </DockPanel>
 
 </Window>
