--- a/AI-Group/EditAIInformation.xaml
+++ b/AI-Group/EditAIInformation.xaml
@@ -1,4 +1,4 @@
-<Window x:Class="AI_Group.EditAIInformation"
+﻿<Window x:Class="AI_Group.EditAIInformation"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -8,16 +8,17 @@
         Title="编辑AI信息" Height="500" Width="400" WindowStartupLocation="CenterOwner" >
     <StackPanel Margin="10">
         <TextBlock Text="AI Name:" FontWeight="SemiBold"/>
-        <TextBox x:Name="AIName" Margin="0,5,0,15"/>
+        <TextBox x:Name="AIName" Margin="0,5,0,15" Style="{StaticResource StyledTextBox}"/>
         <TextBlock Text="AI URL:" FontWeight="SemiBold"/>
-        <TextBox x:Name="AIUrl" Margin="0,5,0,15" LostFocus="AIUrl_LostFocus"/>
+        <TextBox x:Name="AIUrl" Margin="0,5,0,15" LostFocus="AIUrl_LostFocus" Style="{StaticResource StyledTextBox}"/>
         <TextBlock Text="AI Logo Url:" FontWeight="SemiBold"/>
-        <TextBox x:Name="AILogoUrl" Margin="0,5,0,15"/>
+        <TextBox x:Name="AILogoUrl" Margin="0,5,0,15" Style="{StaticResource StyledTextBox}"/>
         <TextBlock Text="AI Logo Preview:" FontWeight="SemiBold"/>
         <Border BorderBrush="Gray" BorderThickness="1" Width="110" Height="110" Margin="10,10,10,10">
             <Image x:Name="AILogoPreview" Stretch="Uniform" Height="100" Width="100" Margin="0,0,0,0" Source="pack://application:,,,/logo.ico"  />
         </Border>
-        <Button x:Name="LoadLocalIcon" Content="浏览图标" Width="100" Click="LoadLocalIcon_Click"/>
-        <Button Content="Add AI" Width="100" Height="30" HorizontalAlignment="Center" Click="AddAIButton_Click" Margin="30"/>
+        <Button x:Name="LoadLocalIcon" Content="上传图标" Width="110" Height="30" Style="{StaticResource StyledButton}" Click="LoadLocalIcon_Click"/>
+        <Button Content="Add AI" Style="{StaticResource StyledButton}" Width="300" Height="40" HorizontalAlignment="Center" Click="AddAIButton_Click" Margin="10
+                "/>
     </StackPanel>
 </Window>
